// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Controls Will render the controls for multiplayer player mode 1`] = `
<div
  className="controls"
>
  <canvas
    height={150}
    tabIndex="0"
    width={210}
  />
  <FontAwesomeIcon
    beat={false}
    beatFade={false}
    border={false}
    bounce={false}
    className="controls__multiplayer"
    fade={false}
    fixedWidth={false}
    flip={false}
    icon={
      Object {
        "icon": Array [
          448,
          512,
          Array [],
          "f007",
          "M224 256c70.7 0 128-57.3 128-128S294.7 0 224 0 96 57.3 96 128s57.3 128 128 128zm89.6 32h-16.7c-22.2 10.2-46.9 16-72.9 16s-50.6-5.8-72.9-16h-16.7C60.2 288 0 348.2 0 422.4V464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48v-41.6c0-74.2-60.2-134.4-134.4-134.4z",
        ],
        "iconName": "user",
        "prefix": "fas",
      }
    }
    inverse={false}
    listItem={false}
    mask={null}
    maskId={null}
    pull={null}
    pulse={false}
    rotation={null}
    shake={false}
    size={null}
    spin={false}
    spinPulse={false}
    spinReverse={false}
    swapOpacity={false}
    symbol={false}
    title=""
    titleId={null}
    transform={null}
  />
  <span>
    Lines Cleared
  </span>
  <span>
    0
  </span>
  <span>
    Difficulty
  </span>
  <span>
    3
  </span>
  <span>
    Multi Player Mode
  </span>
  <span
    className="controls__socket"
  >
    stub_socket_Id
  </span>
</div>
`;

exports[`The Controls Will render the controls for single player mode 1`] = `
<div
  className="controls"
>
  <canvas
    height={150}
    tabIndex="0"
    width={210}
  />
  <div
    className="controls__resetPause"
  >
    <FontAwesomeIcon
      beat={false}
      beatFade={false}
      border={false}
      bounce={false}
      className="controls__resetPause__reset"
      fade={false}
      fixedWidth={false}
      flip={false}
      icon={
        Object {
          "icon": Array [
            512,
            512,
            Array [],
            "f011",
            "M400 54.1c63 45 104 118.6 104 201.9 0 136.8-110.8 247.7-247.5 248C120 504.3 8.2 393 8 256.4 7.9 173.1 48.9 99.3 111.8 54.2c11.7-8.3 28-4.8 35 7.7L162.6 90c5.9 10.5 3.1 23.8-6.6 31-41.5 30.8-68 79.6-68 134.9-.1 92.3 74.5 168.1 168 168.1 91.6 0 168.6-74.2 168-169.1-.3-51.8-24.7-101.8-68.1-134-9.7-7.2-12.4-20.5-6.5-30.9l15.8-28.1c7-12.4 23.2-16.1 34.8-7.8zM296 264V24c0-13.3-10.7-24-24-24h-32c-13.3 0-24 10.7-24 24v240c0 13.3 10.7 24 24 24h32c13.3 0 24-10.7 24-24z",
          ],
          "iconName": "power-off",
          "prefix": "fas",
        }
      }
      inverse={false}
      listItem={false}
      mask={null}
      maskId={null}
      onClick={[Function]}
      pull={null}
      pulse={false}
      rotation={null}
      shake={false}
      size={null}
      spin={false}
      spinPulse={false}
      spinReverse={false}
      swapOpacity={false}
      symbol={false}
      title=""
      titleId={null}
      transform={null}
    />
    <FontAwesomeIcon
      beat={false}
      beatFade={false}
      border={false}
      bounce={false}
      className="controls__resetPause__pause"
      fade={false}
      fixedWidth={false}
      flip={false}
      icon={
        Object {
          "icon": Array [
            448,
            512,
            Array [],
            "f04c",
            "M144 479H48c-26.5 0-48-21.5-48-48V79c0-26.5 21.5-48 48-48h96c26.5 0 48 21.5 48 48v352c0 26.5-21.5 48-48 48zm304-48V79c0-26.5-21.5-48-48-48h-96c-26.5 0-48 21.5-48 48v352c0 26.5 21.5 48 48 48h96c26.5 0 48-21.5 48-48z",
          ],
          "iconName": "pause",
          "prefix": "fas",
        }
      }
      inverse={false}
      listItem={false}
      mask={null}
      maskId={null}
      pull={null}
      pulse={false}
      rotation={null}
      shake={false}
      size={null}
      spin={false}
      spinPulse={false}
      spinReverse={false}
      swapOpacity={false}
      symbol={false}
      title=""
      titleId={null}
      transform={null}
    />
  </div>
  <button
    className="controls__raise"
    onClick={[Function]}
    type="submit"
  >
    Raise Floor
  </button>
  <span>
    Lines Cleared
  </span>
  <span>
    0
  </span>
  <span>
    Level
  </span>
  <span>
    0
  </span>
  <span>
    Single Player Mode
  </span>
</div>
`;

exports[`The Controls Will render the controls for single player mode with an option to switch to multiplayer mode 1`] = `
<div
  className="controls"
>
  <canvas
    height={150}
    tabIndex="0"
    width={210}
  />
  <div
    className="controls__resetPause"
  >
    <FontAwesomeIcon
      beat={false}
      beatFade={false}
      border={false}
      bounce={false}
      className="controls__resetPause__reset"
      fade={false}
      fixedWidth={false}
      flip={false}
      icon={
        Object {
          "icon": Array [
            512,
            512,
            Array [],
            "f011",
            "M400 54.1c63 45 104 118.6 104 201.9 0 136.8-110.8 247.7-247.5 248C120 504.3 8.2 393 8 256.4 7.9 173.1 48.9 99.3 111.8 54.2c11.7-8.3 28-4.8 35 7.7L162.6 90c5.9 10.5 3.1 23.8-6.6 31-41.5 30.8-68 79.6-68 134.9-.1 92.3 74.5 168.1 168 168.1 91.6 0 168.6-74.2 168-169.1-.3-51.8-24.7-101.8-68.1-134-9.7-7.2-12.4-20.5-6.5-30.9l15.8-28.1c7-12.4 23.2-16.1 34.8-7.8zM296 264V24c0-13.3-10.7-24-24-24h-32c-13.3 0-24 10.7-24 24v240c0 13.3 10.7 24 24 24h32c13.3 0 24-10.7 24-24z",
          ],
          "iconName": "power-off",
          "prefix": "fas",
        }
      }
      inverse={false}
      listItem={false}
      mask={null}
      maskId={null}
      onClick={[Function]}
      pull={null}
      pulse={false}
      rotation={null}
      shake={false}
      size={null}
      spin={false}
      spinPulse={false}
      spinReverse={false}
      swapOpacity={false}
      symbol={false}
      title=""
      titleId={null}
      transform={null}
    />
    <FontAwesomeIcon
      beat={false}
      beatFade={false}
      border={false}
      bounce={false}
      className="controls__resetPause__pause"
      fade={false}
      fixedWidth={false}
      flip={false}
      icon={
        Object {
          "icon": Array [
            448,
            512,
            Array [],
            "f04c",
            "M144 479H48c-26.5 0-48-21.5-48-48V79c0-26.5 21.5-48 48-48h96c26.5 0 48 21.5 48 48v352c0 26.5-21.5 48-48 48zm304-48V79c0-26.5-21.5-48-48-48h-96c-26.5 0-48 21.5-48 48v352c0 26.5 21.5 48 48 48h96c26.5 0 48-21.5 48-48z",
          ],
          "iconName": "pause",
          "prefix": "fas",
        }
      }
      inverse={false}
      listItem={false}
      mask={null}
      maskId={null}
      pull={null}
      pulse={false}
      rotation={null}
      shake={false}
      size={null}
      spin={false}
      spinPulse={false}
      spinReverse={false}
      swapOpacity={false}
      symbol={false}
      title=""
      titleId={null}
      transform={null}
    />
  </div>
  <FontAwesomeIcon
    beat={false}
    beatFade={false}
    border={false}
    bounce={false}
    className="controls__multiplayer"
    fade={false}
    fixedWidth={false}
    flip={false}
    icon={
      Object {
        "icon": Array [
          640,
          512,
          Array [],
          "f0c0",
          "M96 224c35.3 0 64-28.7 64-64s-28.7-64-64-64-64 28.7-64 64 28.7 64 64 64zm448 0c35.3 0 64-28.7 64-64s-28.7-64-64-64-64 28.7-64 64 28.7 64 64 64zm32 32h-64c-17.6 0-33.5 7.1-45.1 18.6 40.3 22.1 68.9 62 75.1 109.4h66c17.7 0 32-14.3 32-32v-32c0-35.3-28.7-64-64-64zm-256 0c61.9 0 112-50.1 112-112S381.9 32 320 32 208 82.1 208 144s50.1 112 112 112zm76.8 32h-8.3c-20.8 10-43.9 16-68.5 16s-47.6-6-68.5-16h-8.3C179.6 288 128 339.6 128 403.2V432c0 26.5 21.5 48 48 48h288c26.5 0 48-21.5 48-48v-28.8c0-63.6-51.6-115.2-115.2-115.2zm-223.7-13.4C161.5 263.1 145.6 256 128 256H64c-35.3 0-64 28.7-64 64v32c0 17.7 14.3 32 32 32h65.9c6.3-47.4 34.9-87.3 75.2-109.4z",
        ],
        "iconName": "users",
        "prefix": "fas",
      }
    }
    inverse={false}
    listItem={false}
    mask={null}
    maskId={null}
    pull={null}
    pulse={false}
    rotation={null}
    shake={false}
    size={null}
    spin={false}
    spinPulse={false}
    spinReverse={false}
    swapOpacity={false}
    symbol={false}
    title=""
    titleId={null}
    transform={null}
  />
  <button
    className="controls__raise"
    onClick={[Function]}
    type="submit"
  >
    Raise Floor
  </button>
  <span>
    Lines Cleared
  </span>
  <span>
    0
  </span>
  <span>
    Level
  </span>
  <span>
    0
  </span>
  <span>
    Single Player Mode
  </span>
</div>
`;
